# cmake_cpp_picosdk_project_template

./: CMakeLists.txt  README.md
src/pico/: main.cpp
